[tool.poetry]
name = "web-hw-11"
version = "0.1.0"
description = ""
authors = ["m0wgli <rodiontiutiunyk@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "web_hw_11"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.9"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
